Added problems of Graph