@@ -3,7 +3,6 @@ package com.dsa.heap;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static java.util.Arrays.stream;
 
@@ -22,19 +21,19 @@ public class TopKFrequentNumbers {
     static List<Integer> findElts(int[] arr,int k) {
         List<Integer> topFreqNumbers = new ArrayList<>();
         List<Frequency> frequencies = getFrequency(arr).entrySet()
-                .stream().map(entry -> new Frequency(entry.getKey(), entry.getValue())).collect(Collectors.toList());
-        if (frequencies.size() == 0) {
+                .stream().map(entry -> new Frequency(entry.getKey(), entry.getValue())).toList();
+        if (frequencies.isEmpty()) {
             throw new RuntimeException("Data stream is empty.");
         }
-        PriorityQueue<Frequency> pq = new PriorityQueue<>(Comparator.comparingLong(Frequency::getCount));
+        PriorityQueue<Frequency> pq = new PriorityQueue<>(Comparator.comparingLong(Frequency::count));
         for (Frequency f : frequencies) {
             pq.offer(f);
             if (pq.size() > k) {
                 pq.poll();
             }
         }
-        while (pq.size() > 0) {
-            topFreqNumbers.add(pq.poll().getNum());
+        while (!pq.isEmpty()) {
+            topFreqNumbers.add(pq.poll().num());
         }
         return topFreqNumbers;
     }
@@ -43,21 +42,6 @@ public class TopKFrequentNumbers {
         return Arrays.stream(arr).boxed().collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
     }
 
-    private static class Frequency{
-        private final int num;
-        private final Long count;
-
-        public Frequency(int num, Long count) {
-            this.num = num;
-            this.count = count;
-        }
-
-        public int getNum() {
-            return num;
-        }
-
-        public Long getCount() {
-            return count;
-        }
+    private record Frequency(int num, Long count) {
     }
 }
